CHANGELOG 0.0.2

- Renamed: Rebranded extension
- Updated: Updated module view and templates to support eZ Pulish 4.x+
- Added: Extension documentation
- Tested: Tested extension with eZ Publish 4.5+