@@ -1,9 +1,11 @@
 FAQ
 
 1. This extension created in responce to a share.ez.no forum request for a solution
-   to create a top level node or move a node to the top level,
+   to 1. This extension created in responce to a share.ez.no forum request for a solution
+   to update the cache of your site after clearing caches manually,
    http://share.ez.no/forums/setup-design/previewcache-on-demand
    
 2. eZ Publish 3.8 compatible copy available from original project downloads,
    http://projects.ez.no/updatecache
+   http://projects.ez.no/content/download/37743/146180/version/2/file/updatecache.zip
 
