@@ -3,7 +3,7 @@ BC UpdateCache extension README
 What is the BC UpdateCache extension?
 ================================
 
-BC UpdateCache is a true eZ publish extension
+BC UpdateCache is a true eZ Publish extension
 that provides module view to update node cache for eZ Publish
 
 This extension is created as an automated way to regenerate
@@ -39,13 +39,13 @@ Requirements
 
 The following requirements exists for using BC UpdateCache extension:
 
-o  eZ publish version:
+o  eZ Publish version:
 
-   Make sure you use eZ publish version 4.x or higher. eZ Publish 4.6+ is recommended.
+   Make sure you use eZ Publish version 4.x or higher. eZ Publish 4.6+ is recommended.
 
 o  PHP CURL extension is required
 
-   Make sure you have the PHP extension for Curl installed
+   Make sure you have the PHP CURL extension installed and available
 
 o  PHP version:
 
@@ -61,7 +61,8 @@ Details on installing BC UpdateCache located in the file doc/INSTALL.
 Usage
 ============
 
-Use the admin siteaccess tab, 'Update Cache' to update site cache via curl.
+Use the admin siteaccess tab, 'Update Cache' to update site cache via PHP CURL extension.
+
 
 Troubleshooting
 ===============
