@@ -1,0 +1,11 @@
+<?php /* #?ini charset="utf-8"?
+
+[BCUpdateCacheSettings]
+# By default the updatecache module view cache checks
+# that the current user is a logged in user with a role of Administrator
+# or a the kernel error, access denied is presented to the user.
+UpdateCacheChecksForUserRole=enabled
+# Role ID of the specific role you wish to restrict access by
+UpdateCacheChecksForRoleID=2
+
+*/ ?>
