@@ -4,3 +4,7 @@ CHANGELOG 0.0.2
 - Updated: Updated module view and templates to support eZ Pulish 4.x+
 - Added: Extension documentation
 - Tested: Tested extension with eZ Publish 4.5+
+- Updated: Security feature addition, Updated module view to deny access to anonymous users and users without settings based 'admin' role ID match to their current roles.
+- Added: Security feature addition, bcupdatecache.ini settings file with module view cache settings to restrict use of view by user role.
+- Updated: Updated all ini setting files to utf8 headers
+
